Revert "Layer Prototype (#821)" (#963)